--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,39 @@
-h1 {
+h1,
+h2 {
   text-align: center;
 }
 
+.images {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 5%;
+}
+
 .btn {
-  padding: 10px;
+  width: 100px;
+  height: 30px;
+  padding: 0 20px;
+  background-color: rgb(133, 85, 33);
+  color: rgb(255, 255, 255);
+  border: 0;
+  cursor: pointer;
+}
+
+.btn-left {
+  border-radius: 50% 0 0 50%;
+}
+
+.btn-right {
+  border-radius: 0 50% 50% 0;
+}
+
+.btn:hover {
+  border: 2px solid rgba(205, 129, 48, 0.5);
 }
 
 .btns {
   display: flex;
+  padding: 10px;
   gap: 10%;
   justify-content: center;
 }
