--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,27 @@ h2 {
   text-align: center;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  gap: 50%;
+}
+
+a {
+  width: 200px;
+  text-decoration: none;
+  font-size: large;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  padding: 10px;
+}
+
 .images {
   display: flex;
   justify-content: center;
